[gd_scene load_steps=25 format=3 uid="uid://bs1yo1162gltj"]

[ext_resource type="Environment" uid="uid://drui1tvkk7b7q" path="res://examples/example/Environment.tres" id="1_o40li"]
[ext_resource type="Script" path="res://addons/tessarakkt.oceanfft/components/OceanEnvironment.gd" id="2_jhrdm"]
[ext_resource type="Material" uid="uid://cmyo0unntq078" path="res://addons/tessarakkt.oceanfft/Ocean.tres" id="5_0jjw4"]
[ext_resource type="Script" path="res://examples/example/Camera.gd" id="5_eso43"]
[ext_resource type="Script" path="res://addons/tessarakkt.oceanfft/components/QuadTree3D.gd" id="5_li4kg"]
[ext_resource type="Shader" path="res://addons/tessarakkt.oceanfft/shaders/SplashParticles.gdshader" id="6_nklv0"]
[ext_resource type="PackedScene" uid="uid://rmewe8a2xeoe" path="res://examples/example/FloatingRectangle.tscn" id="6_q2mn5"]
[ext_resource type="PackedScene" uid="uid://bbes3eh3swxnh" path="res://examples/example/MotorRectangle.tscn" id="7_lob4t"]
[ext_resource type="Script" path="res://addons/tessarakkt.oceanfft/components/Ocean3D.gd" id="7_xa10r"]
[ext_resource type="Script" path="res://examples/example/OceanUI.gd" id="8_h37lk"]
[ext_resource type="Shader" path="res://addons/tessarakkt.oceanfft/shaders/UnderwaterParticles.gdshader" id="10_kqf5f"]
[ext_resource type="Texture2D" uid="uid://n8ghpdii3aqh" path="res://addons/tessarakkt.oceanfft/graphics/Splash.png" id="10_o46r2"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_nywmb"]
noise_type = 3
fractal_type = 0
fractal_octaves = 2
fractal_lacunarity = 3.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_o5jyh"]
width = 1024
height = 1024
seamless = true
noise = SubResource("FastNoiseLite_nywmb")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p0g3t"]
shader = ExtResource("6_nklv0")
shader_parameter/normal_factor = 1.0
shader_parameter/cascade_uv_scales = null
shader_parameter/uv_scale = 0.00195312
shader_parameter/wind_uv_offset = Vector2(0, 0)
shader_parameter/view_distance_max = 16000.0
shader_parameter/cascade_displacements = null
shader_parameter/domain_warp_uv_scale = 6.25e-05
shader_parameter/domain_warp_strength = 1500.0
shader_parameter/camera_position_world = null
shader_parameter/splash_subparticles = 40
shader_parameter/splash_jacobian_limit = -1.0
shader_parameter/splash_coverage = 0.1
shader_parameter/sea_level = 0.0
shader_parameter/lifetime_randomness = 0.25
shader_parameter/emission_box_extents = Vector3(500, 0, 500)
shader_parameter/direction = Vector3(1, 1, 0)
shader_parameter/spread = 45.0
shader_parameter/gravity = Vector3(20, -9.8, 0)
shader_parameter/initial_linear_velocity_min = 25.0
shader_parameter/initial_linear_velocity_max = 35.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5bfsg"]
render_priority = 1
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("10_o46r2")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_p5o28"]
material = SubResource("StandardMaterial3D_5bfsg")
size = Vector2(15, 15)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gc8pj"]
shader = ExtResource("6_nklv0")
shader_parameter/normal_factor = 1.0
shader_parameter/cascade_uv_scales = null
shader_parameter/uv_scale = 0.00195312
shader_parameter/wind_uv_offset = Vector2(0, 0)
shader_parameter/view_distance_max = 16000.0
shader_parameter/cascade_displacements = null
shader_parameter/domain_warp_uv_scale = 6.25e-05
shader_parameter/domain_warp_strength = 1500.0
shader_parameter/camera_position_world = null
shader_parameter/splash_subparticles = 10
shader_parameter/splash_jacobian_limit = -3.0
shader_parameter/splash_coverage = 1.0
shader_parameter/sea_level = 0.0
shader_parameter/lifetime_randomness = 0.25
shader_parameter/emission_box_extents = Vector3(500, 0, 500)
shader_parameter/direction = Vector3(1, 1, 0)
shader_parameter/spread = 45.0
shader_parameter/gravity = Vector3(20, -9.8, 0)
shader_parameter/initial_linear_velocity_min = 20.0
shader_parameter/initial_linear_velocity_max = 30.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5gdxj"]
render_priority = 1
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("10_o46r2")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_g2dg2"]
material = SubResource("StandardMaterial3D_5gdxj")
size = Vector2(15, 15)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_awrh8"]
shader = ExtResource("10_kqf5f")
shader_parameter/emission_sphere_radius = 250.0
shader_parameter/gravity = Vector3(0, -2.5, 0)
shader_parameter/turbulence_noise_strength = 0.25
shader_parameter/turbulence_noise_scale = 0.896006
shader_parameter/turbulence_influence_min = 0.1
shader_parameter/turbulence_influence_max = 0.1
shader_parameter/turbulence_initial_displacement_min = 0.0
shader_parameter/turbulence_initial_displacement_max = 0.0
shader_parameter/turbulence_noise_speed_random = 0.0
shader_parameter/turbulence_noise_speed = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ncfd7"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 1, 0.25098)
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_x0k2k"]
material = SubResource("StandardMaterial3D_ncfd7")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i8f6a"]
bg_color = Color(0.188235, 0.188235, 0.188235, 1)
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[node name="OceanEnvironment" type="WorldEnvironment" node_paths=PackedStringArray("ocean", "sun_light", "sky_light", "splash_particles", "splash_sub_particles", "underwater_particles")]
environment = ExtResource("1_o40li")
script = ExtResource("2_jhrdm")
ocean = NodePath("Ocean3D")
sun_light = NodePath("DirectionalLight3D_Sun")
sky_light = NodePath("DirectionalLight3D_Sky")
splash_particles = NodePath("SplashParticles")
splash_sub_particles = NodePath("SplashParticles/SplashSubParticles")
underwater_particles = NodePath("UnderwaterParticles")

[node name="Ocean3D" type="Node3D" parent="."]
script = ExtResource("7_xa10r")
simulation_frameskip = 1
fft_resolution = 128
horizontal_dimension = 512
time_scale = 1.1
domain_warp_texture = SubResource("NoiseTexture2D_o5jyh")
choppiness = 0.5
wave_scroll_speed = -0.003
wind_speed = 15.0

[node name="QuadTree3D" type="Node3D" parent="."]
script = ExtResource("5_li4kg")
lod_level = 7
quad_size = 32768.0
ranges = Array[float]([250.0, 500.0, 1900.0, 3800.0, 7600.0, 15200.0, 30400.0, 60800.0])
material = ExtResource("5_0jjw4")

[node name="FloatingRectangle" parent="." node_paths=PackedStringArray("ocean") instance=ExtResource("6_q2mn5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 52.6454)
mass = 5000.0
gravity_scale = 4.0
ocean = NodePath("../Ocean3D")

[node name="MotorVesselBody3D" parent="." node_paths=PackedStringArray("ocean") instance=ExtResource("7_lob4t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 112, -0.012544, 0)
mass = 5000.0
gravity_scale = 4.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -5, 0)
thrust_power_main = 25000.0
max_rudder_force = 3000.0
ocean = NodePath("../Ocean3D")
buoyancy_multiplier = 35000.0

[node name="Camera3D" type="Camera3D" parent="MotorVesselBody3D" node_paths=PackedStringArray("reflection_probe")]
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 24, 0)
current = true
near = 1.0
far = 16000.0
script = ExtResource("5_eso43")
speed = 10.0
sprint_speed = 25.0
reflection_probe = NodePath("../../ReflectionProbe")

[node name="ReflectionProbe" type="ReflectionProbe" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 24, 0)
max_distance = 1000.0
size = Vector3(200, 200, 200)
ambient_mode = 0

[node name="SplashParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 19.7738, -9.06308)
emitting = false
amount = 1000
sub_emitter = NodePath("SplashSubParticles")
lifetime = 3.0
transform_align = 1
trail_lifetime = 0.15
process_material = SubResource("ShaderMaterial_p0g3t")
draw_pass_1 = SubResource("QuadMesh_p5o28")

[node name="SplashSubParticles" type="GPUParticles3D" parent="SplashParticles"]
emitting = false
amount = 5000
lifetime = 3.0
process_material = SubResource("ShaderMaterial_gc8pj")
draw_pass_1 = SubResource("QuadMesh_g2dg2")

[node name="UnderwaterParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 19.7738, -9.06308)
emitting = false
amount = 1000
lifetime = 2.0
transform_align = 1
trail_lifetime = 0.15
process_material = SubResource("ShaderMaterial_awrh8")
draw_pass_1 = SubResource("QuadMesh_x0k2k")

[node name="Camera3D" type="Camera3D" parent="." node_paths=PackedStringArray("reflection_probe")]
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 24, 0)
current = true
near = 1.0
far = 16000.0
script = ExtResource("5_eso43")
speed = 100.0
sprint_speed = 500.0
reflection_probe = NodePath("../ReflectionProbe")

[node name="DirectionalLight3D_Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.848048, 0.223954, -0.48027, 0, 0.906308, 0.422618, 0.529919, -0.358401, 0.768593, 0, 2.5, 0)
light_energy = 0.5

[node name="DirectionalLight3D_Sky" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.5, 0)
visible = false
light_energy = 2.5

[node name="CanvasLayer" type="CanvasLayer" parent="." node_paths=PackedStringArray("ocean", "free_camera", "player_camera")]
script = ExtResource("8_h37lk")
ocean = NodePath("../Ocean3D")
free_camera = NodePath("../Camera3D")
player_camera = NodePath("../MotorVesselBody3D/Camera3D")

[node name="Displacement_cascade0" type="TextureRect" parent="CanvasLayer"]
custom_minimum_size = Vector2(256, 256)
offset_right = 40.0
offset_bottom = 40.0

[node name="Displacement_cascade1" type="TextureRect" parent="CanvasLayer"]
custom_minimum_size = Vector2(256, 256)
offset_left = 288.0
offset_right = 544.0
offset_bottom = 256.0

[node name="Displacement_cascade2" type="TextureRect" parent="CanvasLayer"]
custom_minimum_size = Vector2(256, 256)
offset_left = 576.0
offset_right = 832.0
offset_bottom = 256.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_right = 40.0
grow_vertical = 0

[node name="FPS" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="OceanFPS" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(256, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -136.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 166.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_i8f6a")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="SimulateEnabled" type="CheckButton" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Simulate"

[node name="CullEnabled" type="CheckButton" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "LOD Cull Enabled"

[node name="FrameskipLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Frameskip"

[node name="Frameskip" type="SpinBox" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 30.0
value = 1.0

[node name="HeightmapSyncFrameskipLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Heightmap Sync Frameskip"

[node name="HeightmapSyncFrameskip" type="SpinBox" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
min_value = -1.0
max_value = 30.0

[node name="PlanetaryCurveLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Planetary Curve"

[node name="PlanetaryCurve" type="HSlider" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = -1.0
value = 0.001

[node name="SpeedLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Time Scale"

[node name="Speed" type="HSlider" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.05
max_value = 5.0
step = 0.05
value = 0.75

[node name="ChopLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Choppiness"

[node name="Choppiness" type="HSlider" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 2.5
step = 0.1
value = 0.5

[node name="WindSpeedLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Wind Speed"

[node name="WindSpeed" type="HSlider" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
min_value = 15.0
max_value = 250.0
value = 15.0

[node name="WaveSpeedLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Wave Texture Scroll Speed"

[node name="WaveSpeed" type="HSlider" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 0.1
step = 0.001

[node name="WindDirectionLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Wind Direction"

[node name="WindDirection" type="HSlider" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 360.0
step = 0.001
tick_count = 4
ticks_on_borders = true

[connection signal="toggled" from="CanvasLayer/PanelContainer/VBoxContainer/SimulateEnabled" to="CanvasLayer" method="_on_simulate_enabled_toggled"]
[connection signal="toggled" from="CanvasLayer/PanelContainer/VBoxContainer/CullEnabled" to="CanvasLayer" method="_on_cull_enabled_toggled"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/Frameskip" to="CanvasLayer" method="_on_frameskip_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/HeightmapSyncFrameskip" to="CanvasLayer" method="_on_heightmap_sync_frameskip_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/PlanetaryCurve" to="CanvasLayer" method="_on_planetary_curve_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/Speed" to="CanvasLayer" method="_on_speed_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/Choppiness" to="CanvasLayer" method="_on_choppiness_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/WindSpeed" to="CanvasLayer" method="_on_wind_speed_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/WaveSpeed" to="CanvasLayer" method="_on_wave_speed_value_changed"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/WindDirection" to="CanvasLayer" method="_on_wind_direction_value_changed"]
